# string_literal

./: CMakeLists.txt  README.md
include/rkc/: string_literal.hpp
tests/: compile_test.cpp
